# spp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  build
src/: debug.cpp  debug.h  hash.cpp  hash.h  main.cpp  options.cpp  options.hpp  parser.cpp  parser.h  spp.cpp  spp.h  sppdebug.h
tests/: CMakeLists.txt  functions.sh  hashtest.cpp  runtests  sample  sample-processing.sh  sppTests
